# MTechROSIntro

./: README.md
AI in ROS/: AI_withROS.pptx  README.md  Train.ipynb
AI in ROS/AI_activity/: readme.md  readme.txt
AI in ROS/AI_activity/src/sign_rec/: package.xml
AI in ROS/AI_activity/src/sign_rec/src/: detect_sign_template.py  get_samples.py
Computer vision and IA in ROS/IA/: readme.txt
Computer vision and IA in ROS/IA/AI_activity/src/sign_rec/: CMakeLists.txt
Introduction to ROS/catkin_A1/devel/: .catkin  .rosinstall
Introduction to ROS/catkin_A1/devel/lib/pkgconfig/: basic_comms.pc
Introduction to ROS/catkin_custom_msg/devel/: .catkin  local_setup.sh
Introduction to ROS/catkin_custom_msg/devel/lib/pkgconfig/: listener.pc  talker.pc
Introduction to ROS/catkin_custom_msg/src/listener/: CMakeLists.txt
Introduction to ROS/catkin_custom_msg/src/listener/msg/: time_msg.msg
Introduction to ROS/catkin_custom_msg/src/listener/src/: listener_script.py
Introduction to ROS/catkin_custom_msg/src/talker/: package.xml
Introduction to ROS/catkin_custom_msg/src/talker/launch/: talker.launch
Introduction to ROS/catkin_custom_msg/src/talker/src/: talker.py
Introduction to ROS/robot_rviz/: ReadMe.md
Introduction to ROS/robot_rviz/src/puzzlebot/src/: solution_square.py
Introduction to ROS/robot_rviz/src/puzzlebot_control/: package.xml
Introduction to ROS/robot_rviz/src/puzzlebot_gazebo/: package.xml
Introduction to ROS/robot_rviz/src/puzzlebot_gazebo/config_files/: robot_example.rviz
Introduction to ROS/robot_rviz/src/puzzlebot_gazebo/launch/: puzzlebot_gazebo.launch
Introduction to ROS/robot_rviz/src/puzzlebot_world/launch/: puzzlebot_world.launch
Introduction to ROS/robot_rviz/src/puzzlebot_world/src/: circle.cpp
Introduction to ROS/robot_rviz/src/puzzlebot_world/worlds/: track.world
Manipulators/: Manipulators.pptx  README.md
Manipulators/manipulators_xarm/: readme.txt
Manipulators/manipulators_xarm/src/path_planner/: package.xml
Manipulators/manipulators_xarm/src/path_planner/launch/: planner.launch
Manipulators/manipulators_xarm/src/path_planner/src/: GoalPlanner.py
Manipulators/manipulators_xarm/src/path_planner/srv/: RequestGoal.srv
Manipulators/manipulators_xarm/src/pick_place/src/: solution6.py  solution7.py  solution_blank.py
Manipulators/manipulators_xarm6/: readme.txt
Manipulators/manipulators_xarm6/src/path_planner/srv/: AttachObject.srv
Manipulators/manipulators_xarm6/src/pick_place/src/: solution.py
Manipulators/manipulators_xarm7/: readme.txt
Manipulators/manipulators_xarm7/devel/: .catkin  local_setup.sh
Manipulators/manipulators_xarm7/devel/include/path_planner/: AttachObject.h  AttachObjectRequest.h  AttachObjectResponse.h  RequestGoal.h  RequestGoalRequest.h  RequestGoalResponse.h
Manipulators/manipulators_xarm7/devel/include/xarm_msgs/: CIOState.h  GetControllerDigitalIORequest.h  GetDigitalIOResponse.h  GetErrResponse.h  GripperStateResponse.h  MoveAxisAngleRequest.h  MoveRequest.h  MoveVeloRequest.h  MoveVeloResponse.h  MoveVelocityRequest.h  MoveVelocityResponse.h  (+12 more)
Manipulators/manipulators_xarm7/src/path_planner/: CMakeLists.txt
Puzzlebot/: Puzzlebot.pptx  README.md
Puzzlebot/puzzlebot_ws/src/controller/: CMakeLists.txt  package.xml
ROS Basics/: README.md  ROS_basics.pptx
ROS Basics/catkin_A1/: readme.md  readme.txt
ROS Basics/catkin_A1/devel/: local_setup.sh
ROS Basics/catkin_A1/src/basic_comms/: CMakeLists.txt
ROS Basics/catkin_custom_msg/: readme.md  readme.txt
ROS Basics/catkin_custom_msg/src/listener/: package.xml
ROS Basics/catkin_custom_msg/src/talker/: CMakeLists.txt
ROS Basics/robot_rviz/: readme.md  readme.txt
ROS Basics/robot_rviz/src/puzzlebot/: CMakeLists.txt  package.xml
ROS Basics/robot_rviz/src/puzzlebot_gazebo/: CMakeLists.txt
System modelling/: MCR2 Robot Modelling Activity.docx
System modelling/Blank_ws/: README.text
System modelling/Blank_ws/D2_gazebo_activity/src/puzzlebot_gazebo/: package.xml
System modelling/Blank_ws/D2_gazebo_activity/src/puzzlebot_gazebo/launch/: config1.rviz  puzzlebot_joints_test.launch
System modelling/Blank_ws/D2_gazebo_activity/src/puzzlebot_gazebo/urdf/: macros.xacro  puzzlebot.gazebo  puzzlebot.xacro
System modelling/Blank_ws/D2_gazebo_activity/src/puzzlebot_world/: package.xml
Vision and OpenCV/: README.md  Vision_and_OpenCV.pptx
Vision and OpenCV/vision_ws/src/controller/: package.xml
Vision and OpenCV/vision_ws/src/image_proc/: CMakeLists.txt  package.xml
Vision and OpenCV/vision_ws/src/puzzlebot_control/: CMakeLists.txt
Vision and OpenCV/vision_ws/src/puzzlebot_control/src/: puzzlebot_control_node.cpp
Vision and OpenCV/vision_ws/src/puzzlebot_gazebo/: CMakeLists.txt
Vision and OpenCV/vision_ws/src/puzzlebot_world/: CMakeLists.txt  package.xml
(+206 files in other folders)
