<?xml version="1.0"?>
<package format="2">
  <name>puzzlebot_gazebo</name>
  <version>0.0.1</version>
  <description>The puzzlebot_gazebo package</description>

  <maintainer email="almarebeca.velascoolmos@manchester.ac.uk">Rebeca Velasco</maintainer>
  <maintainer email="christopher.blum@manchester-robotics.com">Christopher Blum</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <export>
  
  </export>
</package>
