<?xml version="1.0"?>
<package format="2">
  <name>puzzlebot_world</name>
  <version>0.0.1</version>
  <description>The puzzlebot_world package</description>

  <maintainer email="almarebeca.velascoolmos@manchester.ac.uk">Rebeca Velasco</maintainer>
  <maintainer email="christopher.blum@manchester-robotics.com">Christopher Blum</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
  </package>
